
apply plugin: 'java'
apply plugin: 'eclipse'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    maven {
        url "http://maven.aliyun.com/nexus/content/groups/public/"
    }
    mavenCentral()
    mavenLocal()
}

dependencies {
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
	compile group: 'commons-io', name: 'commons-io', version: '2.5'
	compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
	
	// lombok
	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
	compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
	compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
	
	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
	
	compile files('K:\\install\\jdk\\jdk-8u131-x64\\lib\\tools.jar')
	compile files('K:\\install\\jdk\\jdk-8u131-x64\\lib\\sa-jdi.jar')
}
